--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "@angular/common": "7.2.0",
     "@angular/compiler": "7.2.0",
     "@angular/core": "7.2.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "7.2.0",
     "@angular/http": "7.2.0",
     "@angular/platform-browser": "7.2.0",
     "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/router": "7.2.0",
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
+    "angularfire2": "^5.1.2",
     "bootstrap": "4.1.2",
     "core-js": "2.4.1",
+    "firebase": "^5.10.0",
+    "firebase-admin": "^7.3.0",
+    "firebase-functions": "^2.3.0",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
+    "nodemailer": "^6.1.1",
     "nouislider": "9.2.0",
     "popper.js": "1.14.4",
     "rxjs": "6.2.2",
